added knex for migrations

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,23 @@ dist
 sessions.json
 env
 idea
+/.idea/codeStyles/codeStyleConfig.xml
+/.idea/codeStyles/Project.xml
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/bv_perfume.WRzCPw/schema/information_schema.FNRwLQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/bv_perfume.WRzCPw/schema/pg_catalog.0S1ZNQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/bv_perfume.WRzCPw/schema/public.abK9xQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/postgres.edMnLQ/schema/information_schema.FNRwLQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/postgres.edMnLQ/schema/pg_catalog.0S1ZNQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/bv_perfume.WRzCPw.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7/storage_v2/_src_/database/postgres.edMnLQ.meta
+/.idea/dataSources/eac81751-aae9-4d99-ae29-78d71d1a5ee7.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_15_07_2023_2_35_[Changes]/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_15_07_2023_2_35_[Changes]1/shelved.patch
+/.idea/shelf/Uncommitted_changes_before_Update_at_15_07_2023_2_35__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_15_07_2023_2_35__Changes_1.xml
+/.idea/bv_uz_bot.iml
+/.idea/dataSources.local.xml
+/.idea/dataSources.xml
+/.idea/modules.xml
+/.idea/vcs.xml
