--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "knex": "^2.5.1",
+    "pg": "^8.11.1",
     "telegraf": "^4.12.2",
     "telegraf-session-local": "^2.1.1"
   }
