--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^20.1.7",
+    "@types/node-geocoder": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "eslint": "^8.40.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -35,6 +36,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "knex": "^2.5.1",
+    "node-geocoder": "^4.2.0",
     "pg": "^8.11.1",
     "telegraf": "^4.12.2",
     "telegraf-session-local": "^2.1.1"
